fix responsiveLayout issues

--- a/public/index.css
+++ b/public/index.css
@@ -64,6 +64,7 @@ main .row {
   margin-top: 5px;
 }
 
+
 fieldset div {
   display: flex;
   align-items: center;
@@ -128,6 +129,15 @@ h2, h2, h3, address {
   border: 2px solid black ;
   margin: 3px;
   
+}
+
+.edit-form {
+  max-width: 340px;
+  text-align: left;
+}
+
+textarea {
+  max-width: 335px;
 }
 
 .job-skill {
@@ -450,19 +460,37 @@ h2, h2, h3, address {
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
+  .headerImage {  height:120px;  width: auto;}
+  .edit-form {max-width: 340px;}  
+  textarea {max-width: 335px;} 
   .flex-item { max-width: 260px;  } 
   * {font-size: 16px;}
-  .flex-item-job-prospect { max-width:300px;}
+  .flex-item-job-prospect { max-width:300px; border: none}
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
+  .headerImage {  height:120px;  width: auto;}
+  .edit-form{max-width: 500px;}  
+  textarea {max-width: 495px;} 
   .flex-item { max-width: 260px;  }
   .flex-item-job-prospect { max-width:300px;}
 }
 
+/* Medium devices (landscape tablets, 320px and up) */
+@media only screen and (min-width: 320px) {
+  .headerImage {  height:120px;  width: auto;}
+  .edit-form{max-width: 310px;}  
+  textarea {max-width: 305px;} 
+  .flex-item { max-width: 500px;  }
+  * {font-size: 20px;}
+  .flex-item-job-prospect { max-width:300px; border: none}
+}
+
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+  .edit-form{max-width: 500px;}  
+  textarea {max-width: 495px;} 
   .flex-item { max-width: 500px;  }
   * {font-size: 20px;}
   .flex-item-job-prospect { max-width:300px;}
@@ -470,6 +498,8 @@ h2, h2, h3, address {
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
+  .edit-form{max-width: 500px;}  
+  textarea {max-width: 495px;} 
   .flex-item { max-width: 500px;  }
   * {font-size: 20px;}
   .add-prospect-to { font-size: 20px;}
@@ -479,6 +509,8 @@ h2, h2, h3, address {
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
   .header {height: 200px;}
+  .edit-form {max-width: 500px;}  
+  textarea {max-width: 495px;} 
   .flex-item { max-width: 500px;  }
   * {font-size: 20px;}
   .add-prospect-to { font-size: 20px;}
